Delete && GetSummary
