# dto/expense/expense_summary_dto.go
@@ -1,0 +1,5 @@
+package expense
+
+type SummaryDto struct {
+	Category string `json:"category" db:"category"`
+}
